name:                vrpn
version:             0.1.0.2
license:             MIT
license-file:        LICENSE
author:              Brian W Bush
maintainer:          b.w.bush@acm.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable vrpn
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  C-sources:           src/vrpn.cpp
  Extra-libraries:     vrpn stdc++
