name:                vrpn
version:             0.1.1.1
license:             MIT
license-file:        LICENSE
author:              Brian W Bush
maintainer:          b.w.bush@acm.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.VRPN
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  C-sources:           src/vrpn.cpp
  include-dirs:        /usr/local/include
  extra-lib-dirs:      /usr/local/lib
  extra-libraries:     vrpn stdc++

executable test-vrpn
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  C-sources:           src/vrpn.cpp
  include-dirs:        /usr/local/include
  extra-lib-dirs:      /usr/local/lib
  extra-libraries:     vrpn stdc++
